fix search bar spacing issues

--- a/app/assets/stylesheets/components/_audio_player.scss
+++ b/app/assets/stylesheets/components/_audio_player.scss
@@ -10,7 +10,7 @@
     justify-content: center;
     align-items: center;
     height: 50px;
-    width: 250px;
+    width: 300px;
     background-color: #1B1B1C;
     // padding: 0 3px 0 3px;
     text-overflow: ellipsis;
